Updated Module 2.1 Blog

--- a/furuci/index.html
+++ b/furuci/index.html
@@ -203,7 +203,7 @@
                </dl>
 
                <h3>Conclusion</h3>
-               <p>To summarize, with an open mindset surrounded with human centered designs UI will dominate the technology industry. With the help of perception and visual hierarchy it’ll help them sympathize with the consumers and gain a better understanding. And to add the cherry on top, UI Laws help guide how to create a design while looking at outside factors that can deteriorate the path and can help them improve their plan in the long run.</p>
+               <p>To summarize, with an open mindset surrounded with human centered designs UI will dominate the technology industry. With the help of perception and visual hierarchy it’ll help them sympathize with the consumers and gain a better understanding. And to add the cherry on top, UI Laws help guide how to create a design while looking at outside factors that can deteriorate the path and can help them improve their plan in the long run. Without these components; there would be no busniess.</p>
 
             <footer class="article-footer"> 
 
