--- a/mcialwainc/index.html
+++ b/mcialwainc/index.html
@@ -109,6 +109,10 @@
 <h3>Conclusion</h3>
 <p>The Systems Development Life Cycle serves as a crucial guide for developing complex systems. By looking at the different life cycle models—linear, iterative, and incremental—we can better understand the trade-offs between having a structured approach, being adaptable, and moving quickly. Each of these models suits different projects, depending on what they need, the challenges they face, and their ultimate goals. It’s essential to think about a system's life cycle, as this ensures that digital solutions are not just effective at launch, but also remain sustainable, flexible, and valuable over time. In today’s fast-changing tech world, adopting a life cycle mindset isn’t just a nice-to-have; it’s key to achieving success.</p>
 
+
+
+
+
 </main><header>Blog 2.1 post</header>
 <h3>Designing for People: Perception, Attention, and Empathy in Human-Centered Design</h3>
 <p>In our increasingly digital world, where technology shapes most of our interactions, prioritizing designs that serve people is crucial. "Designing for people" encompasses more than just looks or functionality; it’s a mindset that places human needs, limitations, and behaviors at the center of the design journey. It's about creating experiences that resonate with how people perceive, think, and feel. At the core of this approach is human-centered design (HCD)—a practice that emphasizes the importance of user context, expectations, and emotional responses in shaping every design choice. By gaining insights into how individuals process information, where they concentrate their attention, and how empathy affects interactions, designers can build systems that are not only intuitive and inclusive but also truly impactful.</p>
@@ -149,6 +153,8 @@
    By integrating the structured approach of ISO 9241-210 with the empathy and innovation encouraged by IDEO, designers unlock a powerful toolkit to address real-world challenges. A grasp of perception helps designers establish intuitive visual hierarchies, while empathy ensures that these designs resonate and include everyone. Additionally, principles like Jakob’s Law, Fitts’s Law, Hick’s Law, and Miller’s Law anchor our creativity in psychological truths.
    In the end, when we design with a profound respect for human needs and cognitive boundaries, we’re able to create experiences that go beyond mere usability; they become genuinely human. This is the heart of designing for people.</p>
 
+<a href="https://online.hbs.edu/blog/post/what-is-human-centered-design"></a>
+<a href="https://www.figma.com/resource-library/human-centered-design/"></a>
 
 
 
@@ -196,8 +202,8 @@
                We can draw insights from concepts like Tesler’s Law, which reminds us that while complexity is a part of life, we can manage it effectively. Resources such as "Designing with the Mind in Mind" offer practical guidance on how users think, remember, and engage with digital spaces. By keeping human behavior at the forefront of our design process, we can create systems that not only work well but also bring joy.
                As our lives become increasingly influenced by digital interfaces, focusing on usability is essential—it’s both an ethical responsibility and a practical necessity. By crafting systems that align with how people think, remember, and expect things to work, we can ensure that technology enhances our daily experiences instead of complicating them.
                </p>
-<img> 
-<img>
+<a href="https://medium.com/kubo/teslers-law-designing-for-inevitable-complexity-43e07d457f65"></a>
+<a href="https://lawsofux.com/teslers-law/"></a>
 
 
 
