--- a/pedersene/index.html
+++ b/pedersene/index.html
@@ -61,7 +61,13 @@ Tesler's law is also known as The Law of Conservation of Complexity. You can eli
 
          <!-- Module 2.3 Blog Post Starts here -->
 
-         <!-- Module 3.1 Blog Post Starts here -->
+         <!-- Module 3.1 Blog Post Starts here --> Interface layout and control design impact on user behavior. The layout and design of interface controls play a crucial role in shapping how users navigate, understand, and trust a systen. A well-structred layout reduces cognitive load, guides attention, and makes tasks feel intuitive. Poorly designed layouts, on the other hand, can lead to user frustration. Placing a “delete” button too close to a “save” button with similar color and size can lead to critical mistakes, a failure in respecting user error boundaries and feedback principles. Clear spacing, grouping, and visual hierarchy can gently nudge users toward correct behavior and task flow.  
+
+Reflecting on the UX laws. One aesthetic usability effect is a user often perceives more attractive interfaces as easier to use, even if functionality is the same. A polished design builds trust and perceived intuitiveness, which can impact user satisfaction and patience with minor flaws. Two Von restorff effect, this law suggests that visually distinct elements are more likely to be remembered or noticed. In UX, highlighting a “primary action” button in a unique color can direct behavior effectively, a strategy often used in e-commerce checkouts to emphasize the “Place Order” button. Three Postel’s law also known as robustness principle is a “be conservative in what you send, but liberal in what you accept.” In UI terms, this means systems should be flexible with user input, such as allowing phone numbers to be entered with or without dashes or spaces. When interfaces demand exact formatting, it creates unnecessary friction.  
+
+Personal experience, frustrating interface logic. A frustrating experience I had was with a job application portal that reset all entered data when a required field was missed. It violated multiple UX principles like no autosave or clear error feedback, its ignoring forgiving design and feedback loops. It lacked graceful error recovery and failed to follow postel’s law by requiring ultra-specific formats for dates and addresses. Designing with the mind in mind, it explains that poor feedback and high memory demand increase cognitive load, causing users to become disoriented and frustrated. The system supports recognition over recall, making me re-enter information I had already provided.  
+
+Thoughtful interface layout and control design empower users by reducing errors, building trust, and guiding behavior. When designers apply principles like the aesthetic-usability effect, von restorff effect, and postels law they create experiences that align with human psychology and ultimately with user success.  
 
          <!-- Module 3.2 Blog Post Starts here -->
 
